--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </div>
             </div>
         </nav>
-        <!-- ----------------------------Fim menu navegação------------------------------------------- -->
+        <!-- ----------------------------Fim menu navegação------------------------------------->
         </div>
     </header>
-    <!-----------------------------------------bloco inicial ----------------------------------------->
+    <!-----------------------------------------bloco inicial ----------------------------------->
     <section id="home" class="d-flex fullscreen-width-header position-relative">
         <div class="container-fluid bloco-principal mt-5"">
             <div class= " container">
@@ -99,8 +99,8 @@
         </div>
         </div>
     </section>
-    <!-- ---------------------------------------fim bloco inicial----------------------------------------->
-    <!-----------------------------------------inicio bloco sobre --------------------------------------- -->
+    <!-- ---------------------------------------fim bloco inicial-------------------------------------->
+    <!-----------------------------------------inicio bloco sobre ----------------------------------- -->
     <section id="sobre">
         <div class="container">
             <div class="espaco">
