pequenas melhorias em responsividade

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container-fluid bloco-principal mt-5"">
             <div class= "container">
             <div class="row espaco-y">
-                <div class="col-lg-6">
+                <div class="col-md-6 mr-5">
                     <div class="conteudo espaco">
                         <h1 class="mb-5">Oi, eu sou </h1>
                         <span class="typed-text"></span><span class="cursor">&nbsp;</span>
@@ -90,7 +90,7 @@
                             <span class=" ml-3 fs-3"><i class="bi bi-arrow-down-circle"></i></span></a>
                     </div>
                 </div>
-                <div class="col-lg-6 espaco-top">
+                <div class="col-md-6 espaco-top ml-5">
                     <div class="d-flex justify-content-center align-items-center">
                         <img src="./img/perfil.jpg" alt="imagem de perfil de Manu Coutinho" class="imagem img-fluid">
                     </div>
@@ -420,9 +420,9 @@
                             <a href="https://twitter.com/manucout" class="icones-rodape"><i class="fab fa-twitter mx-2"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 mt-5">
                         <h2 class="fs-1 fw-b px-5 mb-5">Solicite seu projeto:</h2>
-                        <form action="./php/processa_envio.php" method="post">
+                        <form action="#" method="#">
                             <div class="mb-3 divisoria">
                                 <label for="remetente" class="form-label fw-bold mt-4">Me diga o seu nome:</label>
                                 <input type="text" id="remetente" name="remetente" class="form-control-plaintext divisoria" aria-describedby="nome"
