--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="col-md-12">
-                            <h2 class="fs-1 fw-b px-5 mb-5">Entre em Contato</h2>
-                            <p class="texto-contato mb-5"> Eu adoraria discutir novos projetos e desafios. Por favor,
-                                compartilhe maiores informações no formulário ao lado. Assim que possível, entrarei em contato!</p>
+                            <h2 class="fs-1 fw-b px-5 my-5">Tem uma ideia?</h2>
+                            <p class="texto-contato mb-5"> Eu adoraria conhecer suas ideias, discutir novos projetos e, claro, encarar novos desafios. Por favor,
+                                compartilhe maiores informações no formulário ao lado. Assim que possível, retornarei seu contato!</p>
                         </div>
                         <div class="col-md-12">
                             <div>
@@ -421,7 +421,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 mt-5">
-                        <h2 class="fs-1 fw-b px-5 mb-5">Solicite seu projeto:</h2>
+                        <h2 class="fs-1 fw-b px-5 mb-5">Aguardo seu contato:</h2>
                         <form action="#" method="#">
                             <div class="mb-3 divisoria">
                                 <label for="remetente" class="form-label fw-bold mt-4">Me diga o seu nome:</label>
