Início da refatoração n/ alteração de paleta de cores/fonte/arquivos

--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <!--bootstrap-->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/style.css">
+    
     <!--[if lt IE 9]>
 	<script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
     <!--fonts-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/9ffb8b279f.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="https://kit.fontawesome.com/9ffb8b279f.js" crossorigin="anonymous"></script>    
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700;900&display=swap" rel="stylesheet">
-    <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-
+   
     <title>Manu Coutinho - Portfólio</title>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
     <header>
         <!-----------Menu principal------->
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-line-under-text fixed-top bg-white navegacao" role="navigation">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-line-under-text fixed-top navegacao" role="navigation">
             <div class="container position-relative">
                 <div class="col-auto col-lg-2 d-inline-flex">
                     <a href="index.html" class="navbar-brand brand mx-5" title="Manu Coutinho">
@@ -59,7 +61,7 @@
                     <ul class="navbar-nav mx-5">
                         <li class="nav-item mr-2"><a href="https://www.twitter.com/manucout" class="nav-link"><i class="fab fa-twitter fa-lg"></i></a></i></li>
                         <li class="nav-item mr-2"><a href="https://www.linkedin.com/in/emanuela-coutinho/" class="nav-link"><i class="fab fa-linkedin-in fa-lg"></i></a></li>
-                        <li class="nav-item"><a href="https://github.com/Sasha-first" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
+                        <li class="nav-item"><a href="https://github.com/ManuCoutinho" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -70,36 +72,36 @@
         </div>
     </header>
     <!-----------------bloco inicial ---------->
-    <section id="home" class="d-flex fullscreen-width-header position-relative">
-        <div class="container-fluid bloco-principal mt-5"">
+    <main id="home" class="d-flex fullscreen-width-header position-relative">
+        <div class="container-fluid bloco-principal mt-5">
             <div class= "container">
             <div class="row espaco-y">
                 <div class="col-md-6 mr-5">
                     <div class="conteudo espaco">
                         <h1 class="mb-5">Oi, eu sou </h1>
                         <span class="typed-text"></span><span class="cursor">&nbsp;</span>
-                        <h6 class="mt-5">em Curitiba, Brasil.</h6>
+                        <h6 class="mt-5 fs-3">em Curitiba, Brasil.</h6>
                     </div>
                     <div class="mt-5">
                         <button class="btn btn-lg btn-dark rounded-0 smooth-scroll mt-3 shadow-lg mx-3"><a
                                 class="text-decoration-none text-white" href="#portfolio">Veja meus
                                 trabalhos</a></button>
                         <a class="btn btn-lg btn-link text-dark mt-3 text-decoration-none mx-3 smoth-scroll"
-                            href="#contato"">
+                            href="#contato">
                             Contate-me
                             <span class=" ml-3 fs-3"><i class="bi bi-arrow-down-circle"></i></span></a>
                     </div>
                 </div>
                 <div class="col-md-6 espaco-top ml-5">
                     <div class="d-flex justify-content-center align-items-center">
-                        <img src="./img/perfil.jpg" alt="imagem de perfil de Manu Coutinho" class="imagem img-fluid">
+                        <img src="./img/imgPerfil.jpg" alt="imagem de perfil de Manu Coutinho" class="imagem img-fluid">
                     </div>
                 </div>
             </div>
             <a href="#sobre"><span class="d-flex justify-content-center"><i class="bi bi-chevron-double-down fs-2 d-none d-lg-block"></i></span></a>
         </div>
         </div>
-    </section>
+    </main>
     <!-- ------------fim bloco inicial----------->
     <!-------------inicio bloco sobre --------- -->
     <section id="sobre">
@@ -125,17 +127,17 @@
                     <div class="col-md-6">
                         <div>
                             <img class="img-fluid" src="./img/project-2.jpg"
-                                alt="imagem de um balão expressando pensamento, contendo uma lâmpada, expressando uma ideia">
+                           alt="balão expressando pensamento" caption="imagem de um balão expressando pensamento, contendo uma lâmpada, expressando uma ideia">
                         </div>
                     </div>
                     <div class="row fs-4 my-5 pt-5">
-                        <div class="col-lg-3">
+                        <div class="col-lg-2">
                             <p class="text-muted mb-0">Nome:</p>
                             <p class="text-dark">Manu Coutinho</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <p class="text-muted mb-0">E-mail:</p>
-                            <p class="text-dark" ">gdn.sasha@gmail.com</p>
+                            <p class="text-dark">devmanucoutinho@gmail.com</p>
                         </div>
                         <div class="col-lg-3">
                             <p class="text-muted mb-0">Nascimento:</p>
@@ -310,13 +312,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5">
+                <div class="row mt-5 effect">
                     <div class="col-md-12 d-flex justify-content-center">
-                        <a class="btn btn-lg btn-outline-light btn-link rounded-0 text-decoration-none fw-bold text-dark shadow-lg" href="./pdf/curriculo.pdf">Download CV</a>
+                        <a class="btn btn-lg btn-outline-light btn-link rounded-0 text-decoration-none fw-bold text-dark btn-white" href="./pdf/emanuela-cv.pdf">Download CV</a>
                     </div>
                 </div>
             </div>
-            <a href="#portfolio"><span class="d-flex justify-content-center mt-5 espaco-bottom"><i
+            <a href="#portfolio"><span class="d-flex justify-content-center mt-5 espaco-bottom arrow"><i
                         class="bi bi-chevron-double-down fs-2 d-none d-lg-block"></i></span></a>
         </div>
     </section>
@@ -391,8 +393,8 @@
                     </div>
 
                 </div>
-                <a href="#contato"><span class="d-flex justify-content-center espaco"><i
-                            class="bi bi-chevron-double-down fs-2 d-none d-lg-block"></i></span></a>
+                <a href="#contato"><span class="d-flex justify-content-center espaco arrow"><i
+                            class="bi bi-chevron-double-down fs-2 d-none d-lg-block "></i></span></a>
             </div>
         </div>
     </section>
@@ -411,11 +413,11 @@
                         <div class="col-md-12">
                             <div>
                                 <h3 class="mb-3 fs-2">E-mail:</h3>
-                                <p class="texto-contato mb-5" role="email">gdn.sasha@gmail.com</p>
+                                <p class="texto-contato mb-5" role="email">devmanucoutinho@gmail.com</p>
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <a href="https://github.com/Sasha-first" class="icones-rodape"><i class="fab fa-github mx-2"></i></a>
+                            <a href="https://github.com/ManuCoutinho" class="icones-rodape"><i class="fab fa-github mx-2"></i></a>
                             <a href="https://www.linkedin.com/in/emanuela-coutinho" class="icones-rodape"><i class="fab fa-linkedin-in mx-2"></i></a>
                             <a href="https://twitter.com/manucout" class="icones-rodape"><i class="fab fa-twitter mx-2"></i></a>
                         </div>
@@ -441,7 +443,7 @@
                         </form>
                     </div>
                 </div>
-                <a href="#home"><span class="d-flex justify-content-center mt-5"><i
+                <a href="#home"><span class="d-flex justify-content-center mt-5 arrow"><i
                             class="bi bi-chevron-double-up fs-2 d-none d-lg-block"></i></span></a>
             </div>
         </div>
