--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/globalStyles.css">
     <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/animations.css">
         
     <!--fonts & icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -29,8 +31,8 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
     <header>
-        <!-----------Menu principal------->
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-line-under-text fixed-top navegacao" role="navigation">
+        <!-- nav-->
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-line-under-text fixed-top navegacao" role="menu">
             <div class="container position-relative">
                 <div class="col-auto col-lg-2 d-inline-flex">
                     <a href="index.html" class="navbar-brand brand mx-5" title="Manu Coutinho">
@@ -73,42 +75,41 @@
                 </div>
             </div>
         </nav>
-        <!------------Fim menu principal----------->
+        <!-- fim nav-->
         </div>
     </header>
-    <!-----------------bloco inicial ---------->
-    <main id="home" class="d-flex fullscreen-width-header position-relative">
-        <div class="container-fluid bloco-principal mt-5">
-            <div class= "container">
-            <div class="row espaco-y">
-                <div class="col-md-6 mr-5">
-                    <div class="conteudo espaco">
-                        <h1 class="mb-5">Oi, eu sou </h1>
-                        <span class="typed-text"></span><span class="cursor">&nbsp;</span>
-                        <h6 class="mt-5 fs-3">em Curitiba, Brasil.</h6>
-                    </div>
-                    <div class="mt-5">
-                        <button class="btn btn-lg btn-dark rounded-0 smooth-scroll mt-3 shadow-lg mx-3"><a
-                                class="text-decoration-none text-white" href="#portfolio">Veja meus
-                                trabalhos</a></button>
-                        <a class="btn btn-lg btn-link text-dark mt-3 text-decoration-none mx-3 smoth-scroll"
-                            href="#contato">
-                            Contate-me
-                            <span class=" ml-3 fs-3"><i class="bi bi-arrow-down-circle"></i></span></a>
-                    </div>
-                </div>
-                <div class="col-md-6 espaco-top ml-5">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <img src="./img/imgPerfil.jpg" alt="imagem de perfil de Manu Coutinho" class="imagem img-fluid">
-                    </div>
-                </div>
-            </div>
-            <a href="#sobre"><span class="d-flex justify-content-center"><i class="bi bi-chevron-double-down fs-2 d-none d-lg-block"></i></span></a>
+    <!--bloco principal-->
+    <main id="home" class="d-flex">
+        <div class="container-full bloco-principal">
+            <div class= "container main-section">
+               <div class=" mr-5">
+                  <div class="text-animated">
+                      <h1 class="mb-5">Oi, eu sou </h1>
+                      <span class="typed-text"></span><span class="cursor">&nbsp;</span>
+                      <h6 class="mt-5 fs-3">em Curitiba, Brasil.</h6>
+                  </div>
+
+                  <div class="mt-5">
+                      <button class="btn btn-lg btn-dark rounded-0 mt-3 mx-3 btn-black"><a
+                              class="text-decoration-none text-white" href="#portfolio">Veja meus
+                              trabalhos</a></button>
+                      <a class="btn btn-lg btn-link text-dark mt-3 text-decoration-none mx-3 btn-transparent"
+                          href="#contato">
+                          Contate-me
+                          <span class=" ml-3 fs-3"><i class="bi bi-arrow-down-circle"></i></span></a>
+                  </div>                    
+              </div>
+              <div class=" espaco-top ml-5">
+                  <div class="d-flex justify-content-center align-items-center">
+                      <img src="./img/imgPerfil.jpg" alt="imagem de perfil de Manu Coutinho" class="imagem img-fluid">
+                  </div>
+              </div>            
         </div>
+            <a href="#sobre"><span class="d-flex justify-content-center"><i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
         </div>
     </main>
-    <!-- ------------fim bloco inicial----------->
-    <!-------------inicio bloco sobre --------- -->
+    <!--fim bloco principal-->
+    <!--inicio bloco sobre -->
     <section id="sobre">
         <div class="container">
             <div class="espaco-top">
@@ -129,9 +130,9 @@
                             Prezo pela entrega do trabalho dentro do prazo e metas contratadas.
                         </p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 mt-5">
                         <div>
-                            <img class="img-fluid" src="./img/project-2.jpg"
+                            <img class="img-fluid" src="./img/sidepic.svg"
                            alt="balão expressando pensamento" caption="imagem de um balão expressando pensamento, contendo uma lâmpada, expressando uma ideia">
                         </div>
                     </div>
@@ -475,7 +476,7 @@
     <!-------------------fim rodape ----------------- -->
 
 
-    <script src="./javascript/app.js"></script>
+    <script src="./javascript/animation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 
