--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/animations.css">
+    <link rel="stylesheet" href="./css/header.css">
         
     <!--fonts & icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -32,46 +33,45 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
     <header>
         <!-- nav-->
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-line-under-text fixed-top navegacao" role="menu">
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-line-under-text fixed-top nav-header" role="menu">
             <div class="container position-relative">
-                <div class="col-auto col-lg-2 d-inline-flex">
-                    <a href="index.html" class="navbar-brand brand mx-5" title="Manu Coutinho">
-                    <img src="./img/code-slash.svg" alt="Logo da página Manu Coutinho" width="40">Manu Coutinho</a>       
+                <div class="col-auto">
+                    <a href="index.html" title="Manu Coutinho">Manu Coutinho</a>       
                 </div>                         
                 
-                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav-principal" type="button">
+                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#main-nav" type="button">
                     <i class="bi bi-three-dots-vertical"></i>
                     </button>
 
-                <div class="collapse navbar-collapse menu-principal justify-content-center" id="nav-principal">
+                <div class="collapse navbar-collapse justify-content-center" id="main-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="#home" class="nav-link smooth-scroll">Home</a>
+                            <a href="#home" class="nav-link ">Home</a>
                         </li>
                         <li class="nav-item">
-                                <a href="#sobre" class=" nav-link smooth-scroll">Sobre</a>
+                                <a href="#sobre" class=" nav-link">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#servicos" class="nav-link smooth-scroll">Serviços</a>
+                            <a href="#servicos" class="nav-link">Serviços</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#resumo" class=" nav-link smooth-scroll">Resumo</a>
+                            <a href="#resumo" class=" nav-link">Resumo</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#portfolio" class="nav-link smooth-scroll">Portfólio</a>
+                            <a href="#portfolio" class="nav-link">Portfólio</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#contato" class="nav-link smooth-scroll">Contato</a>
+                            <a href="#contato" class="nav-link">Contato</a>
                         </li>
                     </ul>
-                    <div class="d-none d-lg-block">
-                    <ul class="navbar-nav mx-5">
-                        <li class="nav-item mr-2"><a href="https://www.twitter.com/manucout" class="nav-link"><i class="fab fa-twitter fa-lg"></i></a></i></li>
-                        <li class="nav-item mr-2"><a href="https://www.linkedin.com/in/emanuela-coutinho/" class="nav-link"><i class="fab fa-linkedin-in fa-lg"></i></a></li>
-                        <li class="nav-item"><a href="https://github.com/ManuCoutinho" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
-                        </li>
-                    </ul>
-                </div>
+                     <div class="d-none d-lg-block mx-5">
+                        <ul class="navbar-nav">
+                              <li class="nav-item mr-2"><a href="https://www.twitter.com/manucout" class="nav-link"><i class="fab fa-twitter fa-lg"></i></a></i></li>
+                              <li class="nav-item mr-2"><a href="https://www.linkedin.com/in/emanuela-coutinho/" class="nav-link"><i class="fab fa-linkedin-in fa-lg"></i></a></li>
+                              <li class="nav-item"><a href="https://github.com/ManuCoutinho" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
+                              </li>
+                        </ul>
+                     </div>
                 </div>
             </div>
         </nav>
