:sparkles: new assets and improvements.:

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Manu Coutinho" />
+    <meta name="description" content="Desenvolvedora Front-End em transição de carreira." />
+    <meta name="keywords" content="sites, web, desenvolvimento, programador, manucoutinho, front-end, freelancer, freela, website, portfolio" />
+    <meta name="copyright" content="ManuCoutinho 2021" />
+    <meta http-equiv="content-language" content="pt-br" />
+    <meta property="og:title" content="Portfólio - Manu Coutinho | Desenvolvedora Front-End"/>
+    <meta property="og:description" content="Desenvolvedora Front-End em transição de carreira." />
     <link rel="preconnect" href="https://fonts.gstatic.com">
      <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -21,13 +28,10 @@
     <script src="https://kit.fontawesome.com/9ffb8b279f.js" crossorigin="anonymous"></script>    
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
-    <!--[if lt IE 9]>
-	 <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
-    <![endif]-->
-
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./img/favicon.png">
    
-    <title>Manu Coutinho - Portfólio</title>
+    <title>Portfólio - Manu Coutinho | Desenvolvedora Front-End</title>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="70">
@@ -66,9 +70,9 @@
                     </ul>
                      <div class="d-none d-lg-block mx-5">
                         <ul class="navbar-nav">
-                              <li class="nav-item mr-2"><a href="https://www.twitter.com/manucout" class="nav-link"><i class="fab fa-twitter fa-lg"></i></a></i></li>
-                              <li class="nav-item mr-2"><a href="https://www.linkedin.com/in/emanuela-coutinho/" class="nav-link"><i class="fab fa-linkedin-in fa-lg"></i></a></li>
-                              <li class="nav-item"><a href="https://github.com/ManuCoutinho" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
+                              <li class="nav-item mr-2"><a href="https://www.twitter.com/manucout" target="_blank" class="nav-link"><i class="fab fa-twitter fa-lg"></i></a></i></li>
+                              <li class="nav-item mr-2"><a href="https://www.linkedin.com/in/emanuela-coutinho/" target="_blank" class="nav-link"><i class="fab fa-linkedin-in fa-lg"></i></a></li>
+                              <li class="nav-item"><a href="https://github.com/ManuCoutinho" target="_blank" class="nav-link"><i class="fab fa-github fa-lg"></i></a>
                               </li>
                         </ul>
                      </div>
@@ -81,7 +85,7 @@
     <!--bloco principal-->
     <main id="home" class="d-flex">
         <div class="container-full bloco-principal">
-            <div class= "container main-section">
+            <div class= "container-center main-section">
                <div class=" mr-5">
                   <div class="text-animated">
                       <h1 class="mb-5">Oi, eu sou </h1>
@@ -101,75 +105,85 @@
               </div>
               <div class=" espaco-top ml-5">
                   <div class="d-flex justify-content-center align-items-center">
-                      <img src="./img/imgPerfil.jpg" alt="imagem de perfil de Manu Coutinho" class="imagem img-fluid">
+                      <img src="./img/undraw2.svg" alt="imagem de perfil de Manu Coutinho" class="img-fluid slide-in-bck-right">
                   </div>
               </div>            
         </div>
-            <a href="#sobre"><span class="d-flex justify-content-center"><i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
+            <a href="#sobre"><span class="d-flex justify-content-center mt-5"><i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
         </div>
     </main>
     <!--fim bloco principal-->
     <!--inicio bloco sobre -->
     <section id="sobre">
         <div class="container">
-            <div class="espaco-top">
-                <p class="text-center mt-5">
-                    <span class="text-dark px-2 subtitulos">Sobre</span>
-                </p>
-                <h2 class="fs-1 fw-bold text-center espaco-bottom">Me Conheça Mais</h2>
-                <div class="row">
-                    <div class="col-md-6 ">
-                        <h2 class="mb-5">Olá, sou <span class="underline fw-bold">Manu Coutinho</span></h2>
-                        <p class="texto text-break">Eu sou uma desenvolvedora iniciante, com maior interação em web
-                            designer. Gosto
-                            de desenvolver sites com design cleans, que forneçam uma ótima experiência e acessibilidade
-                            ao usuário final.
-                            Possuo capacitação para realizar a criação e/ou a manutenção de sites, lojas virtuais,
-                            portais de notícias, blogs e aplicações web em geral com interfaces dinâmicas e designs
-                            responsivos.
-                            Prezo pela entrega do trabalho dentro do prazo e metas contratadas.
-                        </p>
-                    </div>
-                    <div class="col-md-6 mt-5">
-                        <div>
-                            <img class="img-fluid" src="./img/sidepic.svg"
-                           alt="balão expressando pensamento" caption="imagem de um balão expressando pensamento, contendo uma lâmpada, expressando uma ideia">
-                        </div>
-                    </div>
-                    <div class="row fs-4 my-5 pt-5">
-                        <div class="col-lg-2">
-                            <p class="text-muted mb-0">Nome:</p>
-                            <p class="text-dark">Manu Coutinho</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <p class="text-muted mb-0">E-mail:</p>
-                            <p class="text-dark">devmanucoutinho@gmail.com</p>
-                        </div>
-                        <div class="col-lg-3">
-                            <p class="text-muted mb-0">Nascimento:</p>
-                            <p class="text-dark">24 Janeiro, 1987</p>
-                        </div>
-                        <div class="col-lg-3">
-                        <p class="text-muted mb-0">De:</p>
-                        <p class="text-dark">Rio de Janeiro, BR</p>
-                    </div>
-                    </div>
+
+            <div class="about">
+
+                  <p class="text-center my-5">
+                     <span class="p-2 subtitles">Sobre</span>
+                  </p>
+                  <h2 class="subtitle-about">Me Conheça Mais</h2>
+
+                  <div class="row mt-5">
+                     <div class="col-md-6">
+                           <h2 class="mb-5">Olá, sou <span class="underline">Manu Coutinho!</span></h2>
+                           <p class="content-about">
+                              Eu sou uma desenvolvedora em formação, movida por uma paixão em construir coisas capazes de integrar 
+                              diversos universos por meio da tecnologia. 
+                              
+                           </p>
+                           <p class="content-about">
+                              Gosto de desenvolver interfaces dinâmicas, atrativas e com 
+                              design pensados para transferir experiências adoráveis ao usuário final, sem barreiras de acesso.
+                           </p>
+                           <p class="content-about">
+                              Minha abordagem para a resolução de problemas é altamente inclusiva, colaborativa e centrada no 
+                              ser humano. Aqui irei compartilhar alguns dos meus mais recentes projetos! 
+                           </p>
+                     </div>
+                     <div class="col-md-6">
+                           <div>
+                              <img class="img-fluid" src="./img/sidepic.svg"
+                              alt="imagem lateral" caption="imagem de uma mulher vestida de amarelo, sentada sobre o símbolo do React">
+                           </div>
+                     </div>
+
+
+                     <div class="grid-about">
+                           <div class="slideInDown">
+                              <p class="text-muted mb-0">Nome:</p>
+                              <p class="content-about ">Emanuela Coutinho</p>
+                           </div>
+                           <div class="slideInDown2">
+                              <p class="text-muted mb-0">E-mail:</p>
+                              <p class="content-about ">devmanucoutinho@gmail.com</p>
+                           </div>
+                           <div class="slideInDown3">
+                              <p class="text-muted mb-0">Nascimento:</p>
+                              <p class="content-about ">Janeiro, 1987</p>
+                           </div>
+                           <div class="slideInDown4">
+                              <p class="text-muted mb-0">De:</p>
+                              <p class="content-about ">Rio de Janeiro, BR</p>
+                           </div>
+                     </div>
                 </div>
             </div>
-            <a href="#servicos"><span class="d-flex justify-content-center "><i
-                        class="bi bi-chevron-double-down fs-2 d-none d-lg-block"></i></span></a>
+
+            <a href="#servicos"><span class="d-flex justify-content-center mt-5">
+               <i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
         </div>
     </section>
     <!----------------fim bloco sobre--------------->
     <!---------------- início bloco serviços-------------- -->
     <section id="servicos">
-        <div class="container-fluid bg-light">
+        <div class="container-full bg-light">
             <div class="container">
-                <div class="espaco-top">
-                    <p class="text-center font-weight-400 mt-5">
-                        <span class="text-dark px-2 subtitulos">O que eu faço?</span>
+                <div class="mt-5">
+                    <p class="text-center mt-5">
+                        <span class="text-dark px-2 subtitles">O que eu faço?</span>
                     </p>
-                    <h2 class="fs-1 font-weight-700 text-center mb-5">Como Posso Te Ajudar no Seu Próximo Projeto?
+                    <h2 class="text-center mb-5">Como Posso Te Ajudar no Seu Próximo Projeto?
                     </h2>
                     <div class="row">
                         <div class="col-md-5">
@@ -206,8 +220,8 @@
                         </div>
                     </div>
                 </div>
-                <a href="#resumo"><span class="d-flex justify-content-center espaco"><i
-                            class="bi bi-chevron-double-down fs-2 d-none d-lg-block"></i></span></a>
+                <a href="#resumo"><span class="d-flex justify-content-center mt-5">
+                   <i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
             </div>
         </div>
     </section>
@@ -216,7 +230,7 @@
         <div class="container">
             <div class="espaco-top">
                 <p class="text-center mt-5">
-                    <span class="text-dark px-2 subtitulos">Resumo</span>
+                    <span class="text-dark px-2 subtitles">Resumo</span>
                 </p>
                 <h2 class="fs-1 fw-bold text-center mb-5">Resumo das Minhas Habilidades</h2>
                 <div class="mt-5 mb-5">
@@ -320,12 +334,13 @@
                 </div>
                 <div class="row mt-5 effect">
                     <div class="col-md-12 d-flex justify-content-center">
-                        <a class="btn btn-lg btn-outline-light btn-link rounded-0 text-decoration-none fw-bold text-dark btn-white" href="./pdf/emanuela-cv.pdf">Download CV</a>
+                        <a class="btn btn-lg btn-outline-light btn-link rounded-0 text-decoration-none fw-bold text-dark btn-white" 
+                        href="./pdf/emanuela-cv.pdf">Download PDF</a>
                     </div>
                 </div>
             </div>
-            <a href="#portfolio"><span class="d-flex justify-content-center mt-5 espaco-bottom arrow"><i
-                        class="bi bi-chevron-double-down fs-2 d-none d-lg-block"></i></span></a>
+            <a href="#portfolio"><span class="d-flex justify-content-center mt-5">
+               <i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
         </div>
     </section>
     <!-- -------------inicio portfolio------------------------>
@@ -334,7 +349,7 @@
             <div class="container">
                 <div class="espaco-top">
                     <p class="text-center mt-5">
-                        <span class="text-dark px-2 subtitulos">Portfólio</span>
+                        <span class="text-dark px-2 subtitles">Portfólio</span>
                     </p>
                     <h2 class="fs-1 fw-bold text-center mb-5 espaco-bottom">Alguns dos meus projetos</h2>
                     <div id="carrosel" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -399,15 +414,15 @@
                     </div>
 
                 </div>
-                <a href="#contato"><span class="d-flex justify-content-center espaco arrow"><i
-                            class="bi bi-chevron-double-down fs-2 d-none d-lg-block "></i></span></a>
+                <a href="#contato"><span class="d-flex justify-content-center mt-5">
+                   <i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
             </div>
         </div>
     </section>
     <!------------------fim portfolio ------------------->
     <!----------------inicio contatos -------------------->
     <section id="contato">
-        <div class="container-fluid ultimo-bloco">
+        <div class="container-full ultimo-bloco">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -423,9 +438,9 @@
                             </div>
                         </div>
                         <div class="col-md-12">
-                            <a href="https://github.com/ManuCoutinho" class="icones-rodape"><i class="fab fa-github mx-2"></i></a>
-                            <a href="https://www.linkedin.com/in/emanuela-coutinho" class="icones-rodape"><i class="fab fa-linkedin-in mx-2"></i></a>
-                            <a href="https://twitter.com/manucout" class="icones-rodape"><i class="fab fa-twitter mx-2"></i></a>
+                            <a href="https://github.com/ManuCoutinho" target="_blank" class="icones-rodape"><i class="fab fa-github mx-2"></i></a>
+                            <a href="https://www.linkedin.com/in/emanuela-coutinho" target="_blank" class="icones-rodape"><i class="fab fa-linkedin-in mx-2"></i></a>
+                            <a href="https://twitter.com/manucout" target="_blank" class="icones-rodape"><i class="fab fa-twitter mx-2"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mt-5">
@@ -444,14 +459,14 @@
                                 <label for="mensagem" class="form-label fw-bold mt-4">Como posso te ajudar?</label>
                                 <textarea type="text" id="mensagem" name="mensagem" class="form-control-plaintext" rows="5" required></textarea>
                             </div>
-                            <button type="submit" name="" class="btn btn-lg btn-dark rounded-0 smooth-scroll mt-3 shadow-lg fw-bold">Enviar 
+                            <button type="submit" name="" class="btn btn-lg btn-dark rounded-0 mt-3 fw-bold btn-form">Enviar 
                                 <span><i class="bi bi-arrow-right-short"></i></span></button>
                         </form>
                     </div>
                 </div>
-                <a href="#home"><span class="d-flex justify-content-center mt-5 arrow"><i
-                            class="bi bi-chevron-double-up fs-2 d-none d-lg-block"></i></span></a>
+                
             </div>
+            <a href="#home"><span class="d-flex mx-5 arrow-reverse"><i class="bi bi-arrow-up-square fs-2 d-none d-lg-block"></i></span></a>
         </div>
     </section>
     <!----------------fim contato --------------------->
