:wheelchair: fixed hover efect

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
      <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--css-->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/globalStyles.css">
@@ -107,7 +109,7 @@
               </div>
               <div class=" espaco-top ml-5">
                   <div class="d-flex justify-content-center align-items-center">
-                      <img src="./img/undraw2.svg" alt="imagem de perfil de Manu Coutinho" class="img-fluid slide-in-bck-right">
+                      <img src="./img/undraw2.svg" alt="imagem de perfil de Manu Coutinho" class="img-fluid slide-in-bck-right" loading="lazy">
                   </div>
               </div>            
         </div>
@@ -151,19 +153,19 @@
                      </div>
 
                      <div class="grid-about">
-                           <div class="slideInDown">
+                           <div class="animate__animated animate__fadeInDown">
                               <p class="text-muted mb-0">Nome:</p>
                               <p class="content-about ">Emanuela Coutinho</p>
                            </div>
-                           <div class="slideInDown2">
+                           <div class="animate__animated animate__fadeInDown animate__delay-1s">
                               <p class="text-muted mb-0">E-mail:</p>
                               <p class="content-about ">devmanucoutinho@gmail.com</p>
                            </div>
-                           <div class="slideInDown3">
+                           <div class="animate__animated animate__fadeInDown animate__delay-1.5s">
                               <p class="text-muted mb-0">Nascimento:</p>
                               <p class="content-about ">Janeiro, 1987</p>
                            </div>
-                           <div class="slideInDown4">
+                           <div class="animate__animated animate__fadeInDown animate__delay-2s">
                               <p class="text-muted mb-0">De:</p>
                               <p class="content-about ">Rio de Janeiro, BR</p>
                            </div>
