:sparkles: insert new section

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
     </section>
     <!--fim bloco servicos-->
     <section>
-       <div class="container-fluid box-hiring">
+       <div class="container-fluid box-hiring-1">
          <div class="container box-content">
-            <h2>Gostaria de trabalhar comigo?</h2>
+            <h2>Conheça os meus projetos mais recentes</h2>
             <a class="btn btn-hiring" href="#contato" role="button">
-               Me Contrate!
+               Aqui!
           </a>
            
          </div>
@@ -352,6 +352,17 @@
                <i class="bi bi-arrow-down-short fs-1 d-none d-lg-block arrow"></i></span></a>
         </div>
     </section>
+    <section>
+      <div class="container-fluid box-hiring-2">
+        <div class="container box-content">
+           <h2>Gostaria de trabalhar comigo?</h2>
+           <a class="btn btn-hiring" href="#contato" role="button">
+              Me Contrate!
+         </a>
+          
+        </div>
+      </div>
+   </section>
     <!-- -------------inicio portfolio------------------------>
     <section id="portfolio" class="bg-light">
         <div class="container-fluid">
